Add plugin update notification.